fixed hero section alignment

--- a/src/Components/Main/Main.css
+++ b/src/Components/Main/Main.css
@@ -6,34 +6,35 @@
 
 .main-div{
     margin-top: 13vw;
-    width: 89%;
+    width: 72vw;
     display: flex;
     justify-content: center;
-    /* border: 1px solid red ; */
-    gap: 1rem;
+    /* gap: 1rem; */
 }
 
 .main-left{
     width: 65%;
 }
 
-
-
 .main-left h1{
-    font-size: 6vw;
+    font-size: 5vw;
     /* line-height: 6rem; */
-    margin-bottom: 4.2vw;
+    margin-bottom: 4vw;
     font-weight: 400;
 }
 
 .main-left p{
     width: 70%;
-    font-size: 1.7vw;
+    font-size: 1.4vw;
     font-weight: 300;
     
 }
 .main-right{
     width: 35%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
     /* border: 1px solid purple; */
     
 }
